src/objects/Karma_Exchange_Admin_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>OrganizationId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecretKey__c</fullName>
        <label>SecretKey</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServerUrl__c</fullName>
        <label>ServerUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Karma Exchange Admin Settings</label>
</CustomObject>